fix double scrollbar issue in search page

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -4,6 +4,7 @@ body {
     background: black;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
     height: 100vh;
 }
 
